# fastapi-tickets-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt
app/: main.py  pyproject.toml
app/api/: base.py
app/api/v1/: tickets.py
app/core/: logging_config.py  settings.py
app/db/: deps.py  session.py
app/domain/: enums.py
app/models/: ticket.py
app/modules/: app_runner.py
app/schemas/: ticket.py
app/services/: ticket_service.py
app/tests/: conftest.py
app/tests/test_routes/: test_ticket_routes.py
app/tests/test_services/: test_ticket_service.py
app/tests/utils/: ticket.py
app/utils/: db.py
tests/: conftest.py
tests/test_routes/: test_ticket_routes.py
tests/test_services/: test_ticket_service.py
tests/utils/: ticket.py
