[project]
name = "fastapi-ticket-api"
version = "0.1.0"
description = "FastAPI REST API"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py312"

exclude = [
  ".venv",
  "venv",
  ".pytest_cache",
  ".ruff_cache",
  "__pycache__",
  "*.db",
  "app/logs",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"app/api/**/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"